--- a/.github/workflows/container-image.yml
+++ b/.github/workflows/container-image.yml
@@ -3,13 +3,11 @@ name: Create container image
 on:
   workflow_dispatch:
   push:
-    branches:
-      - "master"
     tags:
       - "v*"
   pull_request:
     branches:
-      - "master"
+      - "main"
 
 env:
   REGISTRY: ghcr.io
@@ -40,6 +38,13 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=schedule
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
+            type=ref,event=branch
+            type=ref,event=pr
       
       - name: Login to registry
         if: github.event_name != 'pull_request'
