--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,5 +1,10 @@
 version: 2
 updates:
+  - package-ecosystem: docker
+    directory: /
+    open-pull-requests-limit: 0
+    schedule:
+      interval: weekly
   - package-ecosystem: gomod
     directory: /
     open-pull-requests-limit: 0
